# -shopstyle_api

./: .env  db.sqlite3  manage.py  pyproject.toml
shopstyle_api/: asgi.py  connections.py  settings.py  urls.py  views.py  wsgi.py
shopstyle_api/management/commands/: load_data.py
